<resources>
    <plurals name="expense_count_total">
        <item quantity="one">%d expense</item>
        <item quantity="other">%d expenses</item>
    </plurals>
    <string name="app_name">Expenses</string>
    <string name="hello_add_fragment">Hello Add fragment</string>
    <string name="hello_settings_fragment">Hello Settings fragment</string>
    <string name="hello_expenses_fragment">Hello Expenses fragment</string>
    <string name="common_sync_now">Backup now</string>
    <string name="common_sync">Sync entities</string>
    <string name="common_sync_expenses">Sync expenses</string>
    <string name="common_edit">Edit</string>
    <string name="common_delete">Delete</string>
    <string name="common_duplicate">Clone</string>
    <string name="expense_divider">•</string>
    <string name="content_description_close_fragment">Close view</string>
    <string name="content_description_down_arrow">Down arrow</string>
    <string name="content_description_icon">Icon</string>
    <string name="common_category">Category</string>
    <string name="common_payment_method">Payment Method</string>
    <string name="common_discard">Discard</string>
    <string name="common_keep_editing">Keep editing</string>
    <string name="common_warning">Warning</string>
    <string name="common_setup">Setup</string>
    <string name="common_yes">Yes</string>
    <string name="common_save">Save</string>
    <string name="common_change">Change</string>
    <string name="common_flagged">Flagged</string>
    <string name="common_flag">Flag</string>
    <string name="common_empty"> </string>
    <string name="common_cancel">Cancel</string>
    <string name="common_store">Store</string>
    <string name="common_expense">Expense</string>
    <string name="common_ok">OK</string>
    <string name="common_budgets">Budgets</string>
    <string name="common_payments">Payments</string>
    <string name="common_payment_methods">Payment methods</string>
    <string name="common_categories">Categories</string>
    <string name="common_filter">Filter</string>
    <string name="common_next">Next</string>
    <string name="common_done">Done</string>
    <string name="common_previous">Previous</string>
    <string name="common_year">Year</string>
    <string name="common_month">Month</string>
    <string name="common_new_tab">New</string>
    <string name="common_all_tab">History</string>
    <string name="common_extra_tab">Setup</string>
    <string name="common_income">Income</string>
    <string name="common_clear">(Clear)</string>
    <string name="common_monthly">Monthly</string>
    <string name="common_annual">Annual</string>
    <string name="common_text_divider">•</string>
    <string name="common_add_status_automatic">Automatically added</string>
    <string name="common_no">No</string>
    <string name="common_expenses">Expenses</string>
    <string name="paid_using_payment">paid using %1s</string>
    <string name="at_store">at %1s</string>
    <string name="in_category">in category %1s</string>
    <string name="amount_with_currency">$%1s</string>
    <string name="delete_expense_warning_message">Are you sure you want to delete the expense?</string>
    <string name="expenses_empty_message">No expenses!</string>
    <string name="expenses_empty_help_message">tap the ADD EXPENSE button to add a new expense</string>
    <string name="expenses_duplicate_success">Expense duplicated</string>
    <string name="expenses_not_synced">Not synced</string>
    <string name="expenses_filter_incomes">Incomes</string>
    <string name="settings">Settings</string>
    <string name="settings_title_spreadsheet_id">Spreadsheet ID</string>
    <string name="settings_title_sheet_id">Default sheet ID</string>
    <string name="settings_title_theme">Choose theme</string>
    <string name="settings_title_version_info">Version info</string>
    <string name="settings_summary_spreadsheet_id">Spreadsheet ID</string>
    <string name="settings_summary_sheet_id">Current sheet ID</string>
    <string name="settings_summary_auto_backup">Auto backup new expenses</string>
    <string name="settings_summary_theme">Theme</string>
    <string name="settings_hidden_options_enabled">You have enabled hidden options</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_expense_description">Description</string>
    <string name="add_expense_amount">Amount</string>
    <string name="add_expense_content_description_date_selector">Date Selector</string>
    <string name="add_expense_content_description_category_selector">Category Selector</string>
    <string name="add_expense_content_description_payment_method_selector">Payment Method
        Selector</string>
    <string name="add_expense_content_description_flag">Flag</string>
    <string name="add_expense_today">Today</string>
    <string name="exit_while_editing_warning_message">You have unsaved changes.
        Are you sure you want to exit?
    </string>
    <string name="you_have_unsaved_changes">You have unsaved changes</string>
    <string name="add_expense_save_expense">Save expense</string>
    <string name="add_expense_sheet_id_help">Will be saved to %1s</string>
    <string name="add_expense_divide_by_2">Divide by 2</string>
    <string name="add_expense_select_recur_type">Select repeat type</string>
    <string name="add_expense_recur_status_none">Does not repeat</string>
    <string name="add_expense_recur_status_daily">Repeats every day</string>
    <string name="add_expense_recur_status_weekly">Repeats every week</string>
    <string name="add_expense_recur_status_monthly">Repeats every month</string>
    <string name="add_expense_recur_type_none">Do not repeat</string>
    <string name="add_expense_recur_type_daily">Repeat every day</string>
    <string name="add_expense_recur_type_weekly">Repeat every week</string>
    <string name="add_expense_recur_type_monthly">Repeat every month</string>
    <string name="setup_spreadsheet_id_empty">Spreadsheet ID cannot be empty</string>
    <string name="setup_budget_amount">Amount</string>
    <string name="setup_budget_name">Name</string>
    <string name="setup_add_new">Add New</string>
    <string name="setup_category_exists">Category already exists</string>
    <string name="setup_payment_method_exists">Payment method already exists</string>
    <string name="setup_at_least_one">At least one needs to remain</string>
    <string name="setup_budget_separator">\u0020\u0020 | \u0020\u0020</string>
    <string name="setup_budget_none">None</string>
    <string name="setup_budget_limit">Limit: %1s</string>
    <string name="setup_budget_categories">Categories: %1s</string>
    <string name="setup_budget_categories_utilized">All categories already utilized</string>
    <string name="setup_budget_default_name">Budget</string>
    <string name="setup_budget_deleted">Budget deleted</string>
    <string name="setup_budget_edited">Budget edited</string>
    <string name="setup_budget_added">Budget added</string>
    <string name="setup_category_deleted">Category deleted</string>
    <string name="setup_category_edited">Category edited</string>
    <string name="setup_category_added">Category added</string>
    <string name="setup_payment_method_deleted">Payment method deleted</string>
    <string name="setup_payment_method_edited">Payment method edited</string>
    <string name="setup_payment_method_added">Payment method added</string>
    <string name="setup_budget_select_one_category">Select at least one</string>
    <string name="setup_budget_selected_max_category">Max 5 per budget</string>
    <string name="setup_category_add_new_annual">Add Annual category</string>
    <string name="setup_category_add_new_monthly">Add Monthly category</string>
    <string name="setup_payment_method_add_new">Add new payment method</string>
    <string name="setup_budget_add_new_annual">Add Annual budget</string>
    <string name="setup_budget_add_new_monthly">Add Monthly budget</string>
    <string name="default_budget_format">Budget %1d</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete all expenses</string>
    <string name="action_meta_data">Logs</string>
    <string name="metadata_fetch_sheets">Fetch Sheets</string>
    <string name="metadata_delete_logs">Delete Logs</string>
    <string name="all_expenses_filter">Filter</string>
    <string name="all_expenses_modify_filter">Modify Filter</string>
    <string name="all_expenses_go_to_setup">Go To Setup</string>
    <string name="all_expenses_empty_message">No expenses!\n%1s</string>
    <string name="all_expenses_analysis">Analysis</string>
    <string name="expense_detail_backed_up_disability_message">Edit and delete not available for
        backed up expenses</string>
    <string name="expense_detail_add_status_automatic">Added automatically</string>
    <string name="header_title_backup_sync">Backup</string>
    <string name="header_title_entities">Manage Entities</string>
    <string name="header_title_spreadsheet">Spreadsheet</string>
    <string name="header_title_general">General</string>
    <string name="settings_title_migrate">Migrate</string>
    <string name="migration_step_copy_summary">Tap to begin migration</string>
    <string name="migration_step_restore_access_summary">Tap to restore access</string>
    <string name="migration_step_progress_summary">Doing something… Don\'t close the app</string>
    <string name="migration_step_complete_summary">All set! You can continue using the app</string>
    <string name="migration_all_set">You\'re all set!</string>
    <string name="miscellaneous_backup_info_enabled">Enabled! Tap to diagnose issues</string>
    <string name="miscellaneous_backup_info_not_enabled">Not enabled! Tap to setup</string>
    <string name="miscellaneous_backup_info_creating">Doing something</string>
    <string name="miscellaneous_backup_info_error">Error! Tap to resolve</string>
    <string name="miscellaneous_backup_info_good">Enabled! Everything\'s good</string>
    <string name="miscellaneous_backup_info_title">Auto backup</string>
    <string name="miscellaneous_sign_in_fail_message">Something went wrong. Contact dev.</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_battery_saver">Set by Battery Saver</string>
    <string name="theme_system_default">System Default</string>
    <string name="analysis_overall">Overall</string>
    <string name="analysis_used_format">%1s/%2s</string>
    <string name="analysis_remaining_format">%1s left</string>
    <string name="analysis_overused_format">%1s over</string>
    <string name="spreadsheet_entities_sheet_title">Entities</string>
    <string name="spreadsheet_title_format">Expenses %1d</string>
    <string name="filter_options_show_income">Show income</string>
    <string name="filter_options_show_flagged">Show flagged</string>
    <string name="filter_options_flag_header">Flag status</string>
    <string name="filter_options_record_type_header">Type</string>
    <string name="filter_options_flag_flagged">Flagged</string>
    <string name="filter_options_flag_not_flagged">Not flagged</string>
    <string name="filter_options_record_monthly">Monthly</string>
    <string name="filter_options_record_annual">Annual</string>
    <string name="filter_options_income_header">Income</string>
    <string name="filter_options_income_incomes">Incomes</string>
    <string name="filter_options_income_expenses">Expenses</string>
    <string name="filter_options_clear_filter">Clear filter</string>
    <string name="shared_expense_temp">S</string>
    <string name="title_recurring">Recurring</string>
</resources>