<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_backup_now"
        android:title="@string/common_sync_now"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sync"
        android:title="@string/common_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/fragment_metadata"
        android:title="@string/action_meta_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/fragment_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/action_delete"
        app:showAsAction="always" />
</menu>
