<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small"
    tools:background="@android:color/white">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense_select_recur_type"
        android:textAllCaps="true"
        android:textSize="@dimen/text_body1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_recur_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title">

        <RadioButton
            android:id="@+id/radio_recur_type_none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_expense_recur_type_none"
            app:buttonTint="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/radio_recur_type_daily"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_expense_recur_type_daily"
            app:buttonTint="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/radio_recur_type_weekly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_expense_recur_type_weekly"
            app:buttonTint="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/radio_recur_type_monthly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_expense_recur_type_monthly"
            app:buttonTint="@color/colorPrimary" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
