<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/dialog_bg"
        app:tabIndicatorColor="@color/color_teal"
        app:tabSelectedTextColor="@color/color_teal">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_budgets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_budgets" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_payments" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_categories" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_bars"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:paddingBottom="@dimen/padding_extra_extra_large"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="5"
        tools:listitem="@layout/bar_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
