<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_small">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/ButtonClose"
            app:layout_constraintBottom_toBottomOf="@id/btn_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_done" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            style="@style/ButtonUnelevated"
            android:text="@string/common_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="@id/btn_close"
            app:layout_constraintTop_toBottomOf="@id/btn_close"
            app:tabIndicatorColor="@color/color_teal"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/color_teal"
            app:tabTextAppearance="@style/TabText">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_monthly" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_annual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_annual" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            style="@style/ButtonTextIcon"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/setup_budget_add_new_monthly"
            app:icon="@drawable/ic_add"
            app:layout_constraintStart_toStartOf="@id/tabs"
            app:layout_constraintTop_toBottomOf="@id/tabs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_items"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="5"
            tools:listitem="@layout/budget_setup_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
